--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 website:
   site-url: https://iqb-vocabs.github.io/
-  title: "Das IQB auf GitHub - Metadaten"
+  title: "IQB Metadaten"
   favicon: favicon.ico
   page-navigation: true
   repo-url: https://github.com/iqb-vocabs/iqb-vocabs.github.io
@@ -21,10 +21,10 @@ website:
   page-footer:
     background: light
     right:
-      - text: "IQB 2024"
+      - text: "{{< var iqb.footer >}}"
         href: https://www.iqb.hu-berlin.de
     left:
-      - text: Start
+      - text: "{{< fa house >}}"
         href: index.qmd    
         
   sidebar:
@@ -35,21 +35,14 @@ website:
     - href: index.qmd
       text: Start
     - section: "Einführung"
+      href: intro/index.qmd
       contents:
-        - href: intro/index.qmd
-          text: Überblick
-        - href: intro/skohub.qmd
-          text: "Skohub"
-    - section: "Metadatenprofile"
-      contents:
-        - href: metadatenprofile/index.qmd
-          text:  "Überblick"
-        - href: metadatenprofile/profile.qmd
-          text: "Metadatenprofile"
+        - intro/collaboration.qmd
+    - text: "Metadatenprofile"
+      href: metadatenprofile/index.qmd
     - section: "Vokabulare"
+      href: vokabulare/index.qmd
       contents:
-        - href: vokabulare/index.qmd
-          text:  "Überblick"
         - href: vokabulare/bildungstandards.qmd
           text: "Bildungstandards"
         - href: vokabulare/allg_vocabs.qmd
@@ -57,11 +50,12 @@ website:
         - href: vokabulare/forschungsdaten.qmd
           text: "Forschungsdaten"
       
-
 format:
   html:
     theme: cosmo
     css: styles.css
     toc: true
-
+    anchor-sections: true
+    link-external-icon: true
+    link-external-newwindow: true
 
